...
        "Home",
        "Nature",
        "Random"
    ]
    
    private let regularCategories: [String] = [
        "Places & Spaces",
        "Travel & Transit",
        "Household Items",
        "Cuisine & Beverages",
        "Life On Earth",
        "Relatives & Relations",
        "Random",
...
